// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render with minimal props 1`] = `
<div
  className="css-hrxvvd"
  data-test-id="basicDialog"
>
  <div
    className="css-1sirlct"
  />
  <div
    className="css-1h5vk0a"
  >
    <div
      className="css-hw75se"
    />
  </div>
</div>
`;

exports[`<BasicDialog /> should show correct number of buttons 1`] = `
<div
  className="css-hrxvvd"
  data-test-id="basicDialog"
>
  <div
    className="css-1sirlct"
  />
  <div
    className="css-1h5vk0a"
  >
    <div
      className="css-hw75se"
    >
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action0"
        onClick={[MockFunction]}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action0"
          transform={null}
        />
      </Button>
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action1"
        onClick={[MockFunction]}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action1"
          transform={null}
        />
      </Button>
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action2"
        onClick={[MockFunction]}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action2"
          transform={null}
        />
      </Button>
    </div>
  </div>
</div>
`;

exports[`<BasicDialog /> should trigger correct actions 1`] = `
<div
  className="css-hrxvvd"
  data-test-id="basicDialog"
>
  <div
    className="css-1sirlct"
  />
  <div
    className="css-1h5vk0a"
  >
    <div
      className="css-hw75se"
    >
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action0"
        onClick={[MockFunction]}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action0"
          transform={null}
        />
      </Button>
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action1"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          }
        }
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action1"
          transform={null}
        />
      </Button>
      <Button
        className="css-7vankg"
        disabled={false}
        flat={true}
        key="action2"
        onClick={[MockFunction]}
        testId="Button"
        type="primary"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="action2"
          transform={null}
        />
      </Button>
    </div>
  </div>
</div>
`;
